crates/monochange_analysis/tests/snapshots/cargo_semantic_analysis__analyze_changes_reports_cargo_public_api_and_manifest_diffs.snap
---
source: crates/monochange_analysis/tests/cargo_semantic_analysis.rs
expression: analysis
---
{
  "frame": "WorkingDirectory",
  "detection_level": "signature",
  "package_analyses": {
    "core": {
      "package_id": "core",
      "package_record_id": "cargo:crates/core/Cargo.toml",
      "package_name": "core",
      "ecosystem": "cargo",
      "analyzer_id": "cargo/public-api",
      "changed_files": [
        "Cargo.toml",
        "src/lib.rs"
      ],
      "semantic_changes": [
        {
          "category": "public_api",
          "kind": "added",
          "item_kind": "struct",
          "item_path": "Greeter",
          "summary": "struct `Greeter` added",
          "file_path": "src/lib.rs",
          "before_signature": null,
          "after_signature": "pub struct Greeter ;"
        },
        {
          "category": "public_api",
          "kind": "modified",
          "item_kind": "function",
          "item_path": "greet",
          "summary": "function `greet` modified",
          "file_path": "src/lib.rs",
          "before_signature": "fn greet () -> & 'static str",
          "after_signature": "fn greet (name : & str) -> String"
        },
        {
          "category": "dependency",
          "kind": "added",
          "item_kind": "dependency",
          "item_path": "tracing",
          "summary": "dependency `tracing` added",
          "file_path": "Cargo.toml",
          "before_signature": null,
          "after_signature": "[dependencies] 0.1"
        },
        {
          "category": "metadata",
          "kind": "added",
          "item_kind": "feature",
          "item_path": "feature.cli",
          "summary": "feature `feature.cli` added",
          "file_path": "Cargo.toml",
          "before_signature": null,
          "after_signature": ""
        },
        {
          "category": "metadata",
          "kind": "modified",
          "item_kind": "feature",
          "item_path": "feature.default",
          "summary": "feature `feature.default` modified",
          "file_path": "Cargo.toml",
          "before_signature": "",
          "after_signature": "cli"
        },
        {
          "category": "metadata",
          "kind": "modified",
          "item_kind": "manifest_field",
          "item_path": "package.edition",
          "summary": "manifest_field `package.edition` modified",
          "file_path": "Cargo.toml",
          "before_signature": "2021",
          "after_signature": "2024"
        }
      ],
      "warnings": []
    }
  },
  "warnings": []
}
