crates/monochange_analysis/tests/snapshots/cargo_semantic_analysis__analyze_changes_reports_multi_ecosystem_semantic_diffs.snap
---
source: crates/monochange_analysis/tests/cargo_semantic_analysis.rs
expression: analysis
---
{
  "frame": "WorkingDirectory",
  "detection_level": "signature",
  "package_analyses": {
    "core": {
      "package_id": "core",
      "package_record_id": "cargo:crates/core/Cargo.toml",
      "package_name": "core",
      "ecosystem": "cargo",
      "analyzer_id": "cargo/public-api",
      "changed_files": [
        "Cargo.toml",
        "src/lib.rs"
      ],
      "semantic_changes": [
        {
          "category": "public_api",
          "kind": "added",
          "item_kind": "struct",
          "item_path": "Greeter",
          "summary": "struct `Greeter` added",
          "file_path": "src/lib.rs",
          "before_signature": null,
          "after_signature": "pub struct Greeter ;"
        },
        {
          "category": "public_api",
          "kind": "modified",
          "item_kind": "function",
          "item_path": "greet",
          "summary": "function `greet` modified",
          "file_path": "src/lib.rs",
          "before_signature": "fn greet () -> & 'static str",
          "after_signature": "fn greet (name : & str) -> String"
        },
        {
          "category": "dependency",
          "kind": "added",
          "item_kind": "dependency",
          "item_path": "tracing",
          "summary": "dependency `tracing` added",
          "file_path": "Cargo.toml",
          "before_signature": null,
          "after_signature": "[dependencies] 0.1"
        },
        {
          "category": "metadata",
          "kind": "modified",
          "item_kind": "manifest_field",
          "item_path": "package.edition",
          "summary": "manifest_field `package.edition` modified",
          "file_path": "Cargo.toml",
          "before_signature": "2021",
          "after_signature": "2024"
        }
      ],
      "warnings": []
    },
    "mobile": {
      "package_id": "mobile",
      "package_record_id": "dart:packages/mobile/pubspec.yaml",
      "package_name": "mobile_app",
      "ecosystem": "dart",
      "analyzer_id": "dart/pubspec",
      "changed_files": [
        "lib/mobile_app.dart",
        "pubspec.yaml"
      ],
      "semantic_changes": [
        {
          "category": "public_api",
          "kind": "added",
          "item_kind": "class",
          "item_path": "mobile_app::MobileAdmin",
          "summary": "class `mobile_app::MobileAdmin` added",
          "file_path": "lib/mobile_app.dart",
          "before_signature": null,
          "after_signature": "class MobileAdmin {}"
        },
        {
          "category": "public_api",
          "kind": "modified",
          "item_kind": "function",
          "item_path": "mobile_app::greet",
          "summary": "function `mobile_app::greet` modified",
          "file_path": "lib/mobile_app.dart",
          "before_signature": "String greet() => 'hello';",
          "after_signature": "String greet(String name) => 'hello $name';"
        },
        {
          "category": "export",
          "kind": "added",
          "item_kind": "command",
          "item_path": "mobile-admin",
          "summary": "command `mobile-admin` added",
          "file_path": "pubspec.yaml",
          "before_signature": null,
          "after_signature": "null"
        },
        {
          "category": "dependency",
          "kind": "added",
          "item_kind": "dependency",
          "item_path": "riverpod",
          "summary": "dependency `riverpod` added",
          "file_path": "pubspec.yaml",
          "before_signature": null,
          "after_signature": "[dependencies] ^2.5.0"
        },
        {
          "category": "metadata",
          "kind": "added",
          "item_kind": "manifest_field",
          "item_path": "publish_to",
          "summary": "manifest_field `publish_to` added",
          "file_path": "pubspec.yaml",
          "before_signature": null,
          "after_signature": "none"
        },
        {
          "category": "metadata",
          "kind": "added",
          "item_kind": "plugin_platform",
          "item_path": "flutter.plugin.platform.ios",
          "summary": "plugin_platform `flutter.plugin.platform.ios` added",
          "file_path": "pubspec.yaml",
          "before_signature": null,
          "after_signature": "pluginClass=MobilePlugin"
        },
        {
          "category": "metadata",
          "kind": "modified",
          "item_kind": "environment",
          "item_path": "environment.sdk",
          "summary": "environment `environment.sdk` modified",
          "file_path": "pubspec.yaml",
          "before_signature": "^3.4.0",
          "after_signature": "^3.5.0"
        }
      ],
      "warnings": []
    },
    "runtime": {
      "package_id": "runtime",
      "package_record_id": "deno:packages/runtime/deno.json",
      "package_name": "runtime",
      "ecosystem": "deno",
      "analyzer_id": "deno/manifest",
      "changed_files": [
        "cli.ts",
        "deno.json",
        "mod.ts"
      ],
      "semantic_changes": [
        {
          "category": "public_api",
          "kind": "added",
          "item_kind": "class",
          "item_path": "Runner",
          "summary": "class `Runner` added",
          "file_path": "mod.ts",
          "before_signature": null,
          "after_signature": "export class Runner {}"
        },
        {
          "category": "public_api",
          "kind": "added",
          "item_kind": "function",
          "item_path": "cli::cli",
          "summary": "function `cli::cli` added",
          "file_path": "cli.ts",
          "before_signature": null,
          "after_signature": "export function cli();"
        },
        {
          "category": "public_api",
          "kind": "modified",
          "item_kind": "function",
          "item_path": "run",
          "summary": "function `run` modified",
          "file_path": "mod.ts",
          "before_signature": "export function run(): string;",
          "after_signature": "export function run(name: string): string;"
        },
        {
          "category": "export",
          "kind": "added",
          "item_kind": "export",
          "item_path": "./cli",
          "summary": "export `./cli` added",
          "file_path": "deno.json",
          "before_signature": null,
          "after_signature": "./cli.ts"
        },
        {
          "category": "dependency",
          "kind": "added",
          "item_kind": "import_alias",
          "item_path": "npm:zod",
          "summary": "import_alias `npm:zod` added",
          "file_path": "deno.json",
          "before_signature": null,
          "after_signature": "npm:zod@3.24.0"
        },
        {
          "category": "metadata",
          "kind": "added",
          "item_kind": "compiler_option",
          "item_path": "compiler_options.jsx",
          "summary": "compiler_option `compiler_options.jsx` added",
          "file_path": "deno.json",
          "before_signature": null,
          "after_signature": "react-jsx"
        },
        {
          "category": "metadata",
          "kind": "added",
          "item_kind": "task",
          "item_path": "task.lint",
          "summary": "task `task.lint` added",
          "file_path": "deno.json",
          "before_signature": null,
          "after_signature": "deno lint"
        }
      ],
      "warnings": []
    },
    "web": {
      "package_id": "web",
      "package_record_id": "npm:packages/web/package.json",
      "package_name": "@acme/web",
      "ecosystem": "npm",
      "analyzer_id": "npm/package-json",
      "changed_files": [
        "package.json",
        "src/index.ts"
      ],
      "semantic_changes": [
        {
          "category": "public_api",
          "kind": "added",
          "item_kind": "class",
          "item_path": "Greeter",
          "summary": "class `Greeter` added",
          "file_path": "src/index.ts",
          "before_signature": null,
          "after_signature": "export class Greeter {}"
        },
        {
          "category": "public_api",
          "kind": "modified",
          "item_kind": "function",
          "item_path": "greet",
          "summary": "function `greet` modified",
          "file_path": "src/index.ts",
          "before_signature": "export function greet(): string;",
          "after_signature": "export function greet(name: string): string;"
        },
        {
          "category": "export",
          "kind": "added",
          "item_kind": "command",
          "item_path": "acme-web",
          "summary": "command `acme-web` added",
          "file_path": "package.json",
          "before_signature": null,
          "after_signature": "./dist/cli.js"
        },
        {
          "category": "export",
          "kind": "added",
          "item_kind": "export",
          "item_path": "./cli",
          "summary": "export `./cli` added",
          "file_path": "package.json",
          "before_signature": null,
          "after_signature": "./dist/cli.js"
        },
        {
          "category": "export",
          "kind": "modified",
          "item_kind": "export",
          "item_path": ".",
          "summary": "export `.` modified",
          "file_path": "package.json",
          "before_signature": "./src/index.ts",
          "after_signature": "default=./dist/index.js, types=./dist/index.d.ts"
        },
        {
          "category": "dependency",
          "kind": "added",
          "item_kind": "dependency",
          "item_path": "zod",
          "summary": "dependency `zod` added",
          "file_path": "package.json",
          "before_signature": null,
          "after_signature": "[dependencies] 3.24.0"
        },
        {
          "category": "metadata",
          "kind": "added",
          "item_kind": "script",
          "item_path": "script.build",
          "summary": "script `script.build` added",
          "file_path": "package.json",
          "before_signature": null,
          "after_signature": "tsup"
        },
        {
          "category": "metadata",
          "kind": "modified",
          "item_kind": "manifest_field",
          "item_path": "type",
          "summary": "manifest_field `type` modified",
          "file_path": "package.json",
          "before_signature": "module",
          "after_signature": "commonjs"
        }
      ],
      "warnings": []
    }
  },
  "warnings": []
}
